<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".GlassActivity"
    tools:theme="@style/AppTheme.NoActionBar">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/text_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/more_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glass_info"
            android:textAppearance="?attr/textAppearanceBody1" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/more_info_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/view_procedure"
        app:layout_constraintBottom_toTopOf="@id/call_button"
        app:layout_constraintEnd_toEndOf="@id/text_scroll_view"
        app:layout_constraintStart_toStartOf="@id/text_scroll_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/call_glastotaal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_scroll_view"
        app:layout_constraintStart_toStartOf="@id/text_scroll_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
